# tyuiu-rag-api

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
docker/: elasticsearch.yml
docker/configs/elasticsearch/: config.yml
src/: config.py
src/api_v1/: Dockerfile  app.py  container.py  depends.py  lifespan.py
src/api_v1/routers/: __init__.py  chat.py
src/core/rag/: chain.py  utils.py
src/core/rag/modules/: __init__.py  embeddings.py  llm.py  retriever.py  splitter.py  vector_store.py
src/core/rag/services/: __init__.py  embeddings.py  llm.py  retriever.py  vector_store.py
src/misc/: loaders.py
src/rag/: __init__.py  commons.py  container.py  depends.py  factory.py
src/repository/: documents.py
src/schemas/: __init__.py  answer.py
src/services/: __init__.py  chat.py  db.py  docs.py  index.py
static/docs/: tyuiu-rag.docx  ТИУ основная информация old.docx  ТИУ основная информация.docx
static/prompt/: chat.txt  Сотрудник приёмной комиссии.txt
static/texts/: ТИУ для абитуриентов.txt
