[tool.poetry]
name = "tyuiuragapi"
version = "0.1.0"
description = ""
authors = ["AndreyKosov <andrey.kosov.05@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.6"}
langchain = "^0.3.14"
gigachain = "^0.2.16"
elasticsearch = "^8.17.0"
gigachain-community = "^0.2.16.post3"
chromadb = "^0.6.2"
sentence-transformers = "^3.3.1"
pinecone = "^5.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
